# dxsh

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  autogen.sh  builtins.c  configure.ac  dxsh.c  dxsh.h  execute.c  execute.h  expand.c  expand.h  interactive.c  match.c  match.h  parser.c  parser.h  stringbuffer.c  stringbuffer.h  system.h  tokenizer.c  trap.c  trap.h  variables.c  variables.h
.github/workflows/: main.yml
builtins/: break.c  builtins.h  cd.c  colon.c  command.c  continue.c  dot.c  eval.c  exec.c  exit.c  export.c  read.c  return.c  set.c  shift.c  umask.c  unset.c
compat/: sig2str.c  signalnames.c  signalnames.h  str2sig.c  tcgetwinsize.c
m4/: tcgetwinsize.m4
test/: builtins.sh  commands.sh  expand.sh  libtest.sh  parameters.sh  pattern.sh  quoting.sh  redirection.sh  run-tests
